--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
             <div class="container">
 
                 <header>
-                    <h2 class="alt">I'm <strong>IoT Developer</strong>.</h2>
-                    <p>~~한 신입 IoT 개발자 한예솔입니다.</p>
+                    <h2 class="alt">I'm a <strong>IoT Developer</strong>.</h2>
                 </header>
 
+                <p style="font-size: 14px">~~한 신입 IoT 개발자 한예솔입니다.</p>
+                <p style="font-size: 10px; color: black;">* 모바일 모드보다는 데스크탑 모드를 권장드립니다.</p>
+
                 <footer>
-                    <a href="#about" class="button scrolly">Magna Aliquam</a>
+                    <a href="#about" class="button scrolly">Introduce Me</a>
                 </footer>
 
             </div>
@@ -87,7 +89,7 @@
                 </header>
 
                 <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-
+                <p><b>"24살 끈기 있는(?) 신입 IoT 개발자"</b></p>
                 <p>저는 뭐뭐를 좋아하고 어때왔으며 어쩔것입니다아아아아를 이쁘게! 열정 노력 책임감 도전 음.... Elementum sem parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec ornare iaculis.</p>
 
         </section>
