--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <ul>
                     <li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
                     <li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-                    <li><a href="#teckskills" id="portfolio-link"><span class="icon solid fa-th">Tech Skills</span></a></li>
+                    <li><a href="#techskills" id="techskills-link"><span class="icon solid fa-th">Tech Skills</span></a></li>
                     <li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Project</span></a></li>
-                    <li><a href="#experience" id="portfolio-link"><span class="icon solid fa-th">Experience</span></a></li>
-                    <li><a href="#career" id="portfolio-link"><span class="icon solid fa-th">Career</span></a></li>
-                    <li><a href="#education" id="portfolio-link"><span class="icon solid fa-th">Education</span></a></li>
+                    <li><a href="#experience" id="experience-link"><span class="icon solid fa-th">Experience</span></a></li>
+                    <li><a href="#career" id="career-link"><span class="icon solid fa-th">Career</span></a></li>
+                    <li><a href="#education" id="education-link"><span class="icon solid fa-th">Education</span></a></li>
                     <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
                 </ul>
             </nav>
@@ -67,12 +67,13 @@
             <div class="container">
 
                 <header>
-                    <h2 class="alt">I'm a <strong>IoT Developer</strong>.</h2>
+                    <h2 class="alt" style="font-weight: 500;">I'm a <strong>IoT Developer</strong>.</h2>
                 </header>
 
-                <p style="font-size: 14px">~~한 신입 IoT 개발자 한예솔입니다.</p>
-                <p style="font-size: 10px; color: black;">* 모바일 모드보다는 데스크탑 모드를 권장드립니다.</p>
-
+                <p style="font-size: 0.9em;">ㅇㅇㅇㅇㅇ하는<br> 신입 IoT 개발자 한예솔입니다.</p>
+                <!-- 당신을 위한 서비스를 개발하는 / -->
+                <br><br>
+                <p style="font-size: 0.7em; color: black;">* 모바일 모드보다는 데스크탑 모드를 권장드립니다.</p>
                 <footer>
                     <a href="#about" class="button scrolly">Introduce Me</a>
                 </footer>
@@ -81,7 +82,7 @@
         </section>
 
         <!-- 2 About Me -->
-        <section id="about" class="three">
+        <section id="about" class="two">
             <div class="container">
 
                 <header>
@@ -89,72 +90,91 @@
                 </header>
 
                 <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                <p><b>"24살 끈기 있는(?) 신입 IoT 개발자"</b></p>
-                <p>저는 뭐뭐를 좋아하고 어때왔으며 어쩔것입니다아아아아를 이쁘게! 열정 노력 책임감 도전 음.... Elementum sem parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec ornare iaculis.</p>
+                <p style="font-weight:800;text-align: left;">"24살, ㅇㅇ하는 신입 IoT 개발자"</p>
+                <!-- 아이디어: 선택/집중/분석/노력/책임감있는/-->
+
+                <p style="font-size: 0.8em; text-align: left;">
+                    <mark style="font-weight:500;">"안녕하세요. 당신을 위한 서비스를 만드는 신입 IoT 개발자 한예솔입니다."</mark>
+                    <br/>무엇을 만들고 싶은지. 왜 IoT인지. 나의 비전이 뭔지.
+                </p>
 
         </section>
 
-        <!-- 3 teckskills -->
-        <section id="teckskills" class="three">
+        <!-- 3 techskills -->
+        <section id="techskills" class="three">
             <div class="container">
 
                 <header>
                     <h2>Tech Skills</h2>
                 </header>
 
-                <p>개발을 처음 재밌게 느낀 것은 Arduino였습니다. raspberry를 하면서 ~~~ / 스마트케어를 복수 전공하면서 사물인터넷의 매력을 느꼈고 ~~~ Lobortis elementum aliquet nec vitae laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem parturient nulla quam placerat viverra
-                    mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec ornare iaculis.</p>
-                <div data-animate-effect="fadeInLeft">
-                    <div>
-                        <h3><strong>Python</strong></h3>
-                        <div class="progress">
-                            <div role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                                <span>60%</span>
-                            </div>
-                        </div>
-                        예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다. 파이썬 언어의 기본적인 문법에 대해 알고 있으며, 자료구조 및 알고리즘을 파이썬으로 공부하였습니다.
-                    </div>
-                </div>
-                표 넣어서 자리 잡기
+                <p style="font-size: 0.8em;">음.... 이것저것 할줄 아는데 줄글로 쭉쭉쭉 ㅇㅇㅇㅇㅇ하는ㅇㅇ
+                    </br>
+                    ㅇㅇㅇㅇㅇ하는ㅇㅇㅇ</br> ㅇ ㅇㅇㅇㅇㅇ하는ㅇ ㅇ</br> ㅇㅇㅇㅇㅇ하는ㅇㅇㅇㅇ </br>ㅇㅇㅇㅇㅇ하는 </br>밑에 너무 크다 사이즈 줄이기
+                </p>
+
                 <div class="row">
-                    <div class="col-md-offset-3 col-md-6">
-                        <h3 class="progressbar-title">HTML</h3>
-                        <div class="progress">
-                            <div class="progress-bar" style="width: 65%; background: #ed687c;">
-                                <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
-                                <div class="progress-value">65%</div>
-                            </div>
-                        </div>
-
-                        <h3 class="progressbar-title">CSS3</h3>
-                        <div class="progress">
-                            <div class="progress-bar" style="width: 50%; background: #92c26a;">
-                                <span class="progress-icon fa fa-check" style="border-color:#92c26a; color:#92c26a;"></span>
-                                <div class="progress-value">50%</div>
-                            </div>
-                        </div>
-
-                        <h3 class="progressbar-title">java script</h3>
-                        <div class="progress">
-                            <div class="progress-bar" style="width: 80%; background: #f0ad4e;">
-                                <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
-                                <div class="progress-value">80%</div>
-                            </div>
-                        </div>
-                    </div>
+                    <table>
+                        <tr>
+                            <td width="50%">
+                                <div data-animate-effect="fadeInLeft">
+                                    <div>
+                                        <h3><strong>Python</strong></h3>
+                                        <div class="progress">
+                                            <div role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                                <span>60%</span>
+                                            </div>
+                                        </div>
+                                        예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다. 파이썬 언어의 기본적인 문법에 대해 알고 있으며, 자료구조 및 알고리즘을 파이썬으로 공부하였습니다.
+                                    </div>
+                                </div>
+                            </td>
+                            <td width="50%">
+                                <h3 class="progressbar-title">HTML</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" style="width: 65%; background: #ed687c;">
+                                        <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
+                                        <div class="progress-value">65%</div>
+                                    </div>
+                                </div>
+                                예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td width="50%">
+                                <h3 class="progressbar-title">CSS3</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" style="width: 50%; background: #92c26a;">
+                                        <span class="progress-icon fa fa-check" style="border-color:#92c26a; color:#92c26a;"></span>
+                                        <div class="progress-value">50%</div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td width="50%">
+                                <h3 class="progressbar-title">java script</h3>
+                                <div class="progress">
+                                    <div class="progress-bar" style="width: 80%; background: #f0ad4e;">
+                                        <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
+                                        <div class="progress-value">80%</div>
+                                    </div>
+                                </div>
+                                예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다.
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </section>
 
 
         <!-- 4 Portfolio -->
-        <section id="portfolio" class="two">
+        <section id="portfolio" class="four">
             <div class="container">
 
                 <header>
-                    <h2>Portfolio</h2>
+                    <h2>Project</h2>
 
-                    <p>사진을 클릭하면 설명 사이트로 넘어갑니다.</p>
+                    <p style="font-size: 0.7em;">사진을 클릭하면 관련 사이트로 넘어갑니다.</p>
                 </header>
 
 
@@ -237,31 +257,35 @@
                         <article>
                             <a href="#" class="image featured"><img src="images/글로벌 빌리지.png" alt="" /></a>
                             <header>
-                                <h3><a href="#">글로벌 빌리지</a></h3>
+                                <h3>
+                                    <a href="#"></a>글로벌 빌리지</a>
+                                </h3>
                             </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                            <p>2019.09 - 2020.06</p>
                         </article>
 
                         <article>
                             <a href="#" class="image featured"><img src="images/전공체험.jpg" alt="" /></a>
                             <header>
-                                <h3><a href="#">드림멘토</a></h3>
+                                <h3>드림멘토</h3>
                             </header>
                             <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
                         </article>
+
                         <article>
                             <a href="#" class="image featured"><img src="images/일본연수.png" alt="" /></a>
                             <header>
-                                <h3><a href="#">일본 연수</a></h3>
+                                <h3>일본 워크숍</h3>
                             </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                            <p>2019.01</p>
                         </article>
+
                         <article>
                             <a href="#" class="image featured"><img src="images/학생회.png" alt="" /></a>
                             <header>
                                 <h3><a href="#">학생회</a></h3>
                             </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                            <p>2017.03 - 2020.08 </p>
                         </article>
 
                         <article>
@@ -269,7 +293,7 @@
                             <header>
                                 <h3><a href="#">코딩 학습튜터</a></h3>
                             </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                            <p>2019.09 - 2019.12 / 2021.09 - 2021.12</p>
                         </article>
 
                         <article>
@@ -288,21 +312,13 @@
                             <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
                         </article>
 
-                        <article>
-                            <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">Pulvinar sagittis congue</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-                        </article>
-
                     </div>
                 </section>
             </div>
         </section>
 
         <!-- 6 Career -->
-        <section id="career" class="three">
+        <section id="career" class="two">
             <div class="container2">
 
                 <header>
@@ -357,7 +373,7 @@
             }
         </script>
 
-        <section id="education" class="two">
+        <section id="education" class="three">
             <div class="container">
                 <header>
                     <h2>Education</h2>
@@ -387,7 +403,22 @@
                                     <p>순천향대학교 졸업예정 <br> - 사물인터넷학과 본전공 <br> - 스마트케어 복수전공 <br> 2017.03 - 현재</p>
                                 </td>
                                 <td width="200">
-                                    <p>창업을 같이 배웠고... 어쩌고 저쩌고...</p>
+                                    <p>사물인터넷의 전반적인 구조에 대해 학습함으로써 하드웨어부터 소프트웨어까지 전반적으로 다루어 볼 수 있었습니다. ~~ 창업이라는 과목을 통해 아이템을 더 현실적으로 기획하고 개발할 수 있게 되었습니다.</p>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </details>
+                <details name='edu' onclick='onlyone(this)'>
+                    <summary>초당고</summary>
+                    <div class="tpt" style="height:130px;">
+                        <table>
+                            <tr>
+                                <td width="50">
+                                    <p>초당고등학교 졸업 <br> - 과학중점 과정 <br> 2014.03 - 2017.02</p>
+                                </td>
+                                <td width="200">
+                                    <p>여러가지 과학을 배우다 보니 어디에 관심이 생겼고. 수학, 화학동아리 활동했던거. 전문지식 매력에 어쩌고. 아니면 성격영향을 생각하기</p>
                                 </td>
                             </tr>
                         </table>
