--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
     </div>
 
+    <!-- 참고 사이트 https://deaguowl.github.io/-->
     <!-- Main -->
     <div id="main">
 
@@ -114,58 +115,54 @@
                 </p>
 
                 <div class="row">
-                    <table>
-                        <tr>
-                            <td width="50%">
-                                <div data-animate-effect="fadeInLeft">
-                                    <div>
-                                        <h3><strong>Python</strong></h3>
-                                        <div class="progress">
-                                            <div role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                                                <span>60%</span>
-                                            </div>
-                                        </div>
-                                        예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다. 파이썬 언어의 기본적인 문법에 대해 알고 있으며, 자료구조 및 알고리즘을 파이썬으로 공부하였습니다.
-                                    </div>
+                    <div class="col-6 col-12-mobile">
+                        <article class="item">
+                            <h3><strong>Python</strong></h3>
+                            <div class="progress">
+                                <div role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                    <span>60%</span>
                                 </div>
-                            </td>
-                            <td width="50%">
-                                <h3 class="progressbar-title">HTML</h3>
-                                <div class="progress">
-                                    <div class="progress-bar" style="width: 65%; background: #ed687c;">
-                                        <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
-                                        <div class="progress-value">65%</div>
-                                    </div>
+                            </div>
+                            <p>예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다. 파이썬 언어의 기본적인 문법에 대해 알고 있으며, 자료구조 및 알고리즘을 파이썬으로 공부하였습니다.</p>
+                        </article>
+
+                        <article class="item">
+                            <h3 class="progressbar-title">WEB: HTML + CSS + JS</h3>
+                            <div class="progress">
+                                <div class="progress-bar" style="width: 65%; background: #ed687c;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
+                                    <div class="progress-value">65%</div>
                                 </div>
-                                예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다.
-                            </td>
-                        </tr>
-                        <tr>
-                            <td width="50%">
-                                <h3 class="progressbar-title">CSS3</h3>
-                                <div class="progress">
-                                    <div class="progress-bar" style="width: 50%; background: #92c26a;">
-                                        <span class="progress-icon fa fa-check" style="border-color:#92c26a; color:#92c26a;"></span>
-                                        <div class="progress-value">50%</div>
-                                    </div>
+                            </div>
+                            <p>예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다.</p>
+                        </article>
+                    </div>
+
+                    <div class="col-6 col-12-mobile">
+                        <article class="item">
+                            <h3 class="progressbar-title">CSS3</h3>
+                            <div class="progress">
+                                <div class="progress-bar" style="width: 50%; background: #92c26a;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#92c26a; color:#92c26a;"></span>
+                                    <div class="progress-value">50%</div>
                                 </div>
-                            </td>
-                            <td width="50%">
-                                <h3 class="progressbar-title">java script</h3>
-                                <div class="progress">
-                                    <div class="progress-bar" style="width: 80%; background: #f0ad4e;">
-                                        <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
-                                        <div class="progress-value">80%</div>
-                                    </div>
+                            </div>
+                        </article>
+
+                        <article class="item">
+                            <h3 class="progressbar-title">java script</h3>
+                            <div class="progress">
+                                <div class="progress-bar" style="width: 80%; background: #f0ad4e;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
+                                    <div class="progress-value">80%</div>
                                 </div>
-                                예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다.
-                            </td>
-                        </tr>
-                    </table>
+                            </div>
+                            예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다.
+                        </article>
+                    </div>
                 </div>
             </div>
         </section>
-
 
         <!-- 4 Portfolio -->
         <section id="portfolio" class="four">
@@ -189,13 +186,13 @@
                         <article class="item">
                             <a href="#" class="image fit"><img src="images/그로잉밴드.png" alt="" /></a>
                             <header>
-                                <h3>그로잉밴드 - 키즈존<br>#팀P #2019 #아이디어 <br>#제_6회_BIO_창업_아이디어_경진대회_예선합격 <br>#Lab_to_Market_수상작</h3>
+                                <h3>그로잉밴드 (완1)<br>#팀P #2019 #아이디어 <br>#제_6회_BIO_창업_아이디어_경진대회_예선합격 <br>#Lab_to_Market_수상작</h3>
                             </header>
                         </article>
                         <article class="item">
                             <a href="#" class="image fit"><img src="images/스마트클로젯.png" alt="" /></a>
                             <header>
-                                <h3>스마트 클로젯 <br>#아이디어 #2019 #학술제</h3>
+                                <h3>스마트 클로젯 (완1)<br>#아이디어 #2019 #학술제</h3>
                             </header>
                         </article>
                     </div>
@@ -203,19 +200,19 @@
                         <article class="item">
                             <a href="https://github.com/yesol-Han/2020_ESWContest_free_1057" class="image fit"><img src="images/Refrigerator.png" alt="" /></a>
                             <header>
-                                <h3>공용 냉장고 內 도난 방지 시스템 <br>#2020 #캡스톤대회 #학술제 #2인_Project<br>#임베디드SW_경진대회_결선</h3>
+                                <h3>공용 냉장고 內 도난 방지 시스템 <br>#2020 <a href="files/SecurIoT 금상.jpg">#캡스톤대회_금상</a> #학술제 #2인_Project<br><a href="files/ESW 결선진출.png">#임베디드SW_경진대회_결선</a> #창의적_공학설계_경진대회</h3>
                             </header>
                         </article>
                         <article class="item">
                             <a href="#" class="image fit"><img src="images/디지털 헌혈증서 플랫폼.png" alt="" /></a>
                             <header>
-                                <h3>디지털 헌혈증서 플랫폼<br> #캡스톤 #팀P #2020 #Web</h3>
+                                <h3>디지털 헌혈증서 플랫폼 (완1)<br> #캡스톤 #팀P #2020 #Web</h3>
                             </header>
                         </article>
                         <article class="item">
                             <a href="#" class="image fit"><img src="images/wellness강의실.png" alt="" /></a>
                             <header>
-                                <h3>웰니스 강의실<br> #팀P #2018 #Lab_to_Market대회 #일본워크숍_대표</h3>
+                                <h3>웰니스 강의실 (완1)<br> #팀P #2018 #Lab_to_Market대회 #일본_단기_워크숍_대표팀_선발</h3>
                             </header>
                         </article>
                     </div>
@@ -229,7 +226,7 @@
                         <article class="item">
                             <a href="#" class="image fit"><img src="images/메달.png" alt="" /></a>
                             <header>
-                                <h3>메달(Medical Calendar)<br>#2019 #팀P #스마트케어 #웹앱</h3>
+                                <h3>메달(Medical Calendar) <br>#2019 #팀P #스마트케어 #웹앱</h3>
                             </header>
                         </article>
                         <article class="item">
@@ -261,7 +258,9 @@
                                     <a href="#"></a>글로벌 빌리지</a>
                                 </h3>
                             </header>
-                            <p>2019.09 - 2020.06</p>
+                            <p>2019.09 - 2020.06</br>
+                            </p>
+
                         </article>
 
                         <article>
@@ -269,15 +268,15 @@
                             <header>
                                 <h3>드림멘토</h3>
                             </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                            <p>2019.03 - 2020.08</p>
                         </article>
 
                         <article>
-                            <a href="#" class="image featured"><img src="images/일본연수.png" alt="" /></a>
+                            <a href="/files/글로벌+융합교육+프로그램+결과보고서.pdf" class="image featured"><img src="images/일본연수.png" alt="" /></a>
                             <header>
                                 <h3>일본 워크숍</h3>
                             </header>
-                            <p>2019.01</p>
+                            <p>2019.01 <br>학교에서 지원해줌</p>
                         </article>
 
                         <article>
@@ -344,7 +343,7 @@
                         <div>
                             <span></span>
                             <div class="title">
-                                학원알바...? 코딩 학습튜터를 여기에 쓸까... 이게 커리어인가... 학회장은 커리어가 아니겠징...
+                                사물인터넷학과 학생 회장
                             </div>
                             <div class="info">
                                 Let&apos;s make coolest things in javascript
@@ -353,7 +352,7 @@
                                 Presentation
                             </div>
                         </div>
-                        <span class="number"><span>13:00</span> <span>14:00</span></span>
+                        <span class="number"><span>2018.12</span> <span>2020.08</span></span>
                     </li>
                 </ul>
             </div>
@@ -369,7 +368,7 @@
                     cb.open = false;
                 })
 
-                element.open = false;
+                //element.open = false;
             }
         </script>
 
@@ -380,30 +379,47 @@
                 </header>
 
                 <details name='edu' onclick='onlyone(this)'>
-                    <summary>단기 특강도 적어도 되나..?</summary>
+                    <summary>AWS 클라우스 교육 수료</summary>
                     <div class="tpt">
                         <table>
                             <tr>
-                                <td width="50">
-                                    <p>내용 <br> 2019.03 - 현재</p>
+                                <td width="30%">
+                                    <p>내용 <br> 2021.01.18</p>
                                 </td>
-                                <td width="200">
-                                    <p>뭐가 있을까....</p>
+                                <td width="70%">
+                                    <p>ㅇㅇㅇ</p>
+                                    <a href="files\20210118_AWS 클라우드 교육_수료증 (순천향대학교).pdf">AWS 클라우스 교육 수료증</a>
                                 </td>
                             </tr>
                         </table>
                     </div>
                 </details>
                 <details name='edu' onclick='onlyone(this)'>
+                    <summary>블록체인을 통한 Business Insight 정보기술전략 수료</summary>
+                    <div class="tpt">
+                        <table>
+                            <tr>
+                                <td width="30%">
+                                    <p>블록체인 <br> 2019.08.19 - 08.20</p>
+                                </td>
+                                <td width="70%">
+                                    <p>ㅇㅇㅇ</p>
+                                    <a href="files\블록체인 수료증.jpg">블록체인을 통한 Business Insight 정보기술전략(20010101) 수료증</a>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </details>
+                <details name='edu' open onclick='onlyone(this)'>
                     <summary>SCH UNIVERSITY</summary>
                     <div class="tpt" style="height:130px;">
                         <table>
                             <tr>
-                                <td width="50">
+                                <td width="30%">
                                     <p>순천향대학교 졸업예정 <br> - 사물인터넷학과 본전공 <br> - 스마트케어 복수전공 <br> 2017.03 - 현재</p>
                                 </td>
-                                <td width="200">
-                                    <p>사물인터넷의 전반적인 구조에 대해 학습함으로써 하드웨어부터 소프트웨어까지 전반적으로 다루어 볼 수 있었습니다. ~~ 창업이라는 과목을 통해 아이템을 더 현실적으로 기획하고 개발할 수 있게 되었습니다.</p>
+                                <td width="70%">
+                                    <p>4년동안 성적우수 및 프라임 장학금을 통해 등록금 전액 무료, 사물인터넷의 전반적인 구조에 대해 학습함으로써 하드웨어부터 소프트웨어까지 전반적으로 다루어 볼 수 있었습니다. ~~ 창업이라는 과목을 통해 아이템을 더 현실적으로 기획하고 개발할 수 있게 되었습니다.</p>
                                 </td>
                             </tr>
                         </table>
@@ -414,10 +430,10 @@
                     <div class="tpt" style="height:130px;">
                         <table>
                             <tr>
-                                <td width="50">
+                                <td width="30%">
                                     <p>초당고등학교 졸업 <br> - 과학중점 과정 <br> 2014.03 - 2017.02</p>
                                 </td>
-                                <td width="200">
+                                <td width="70%">
                                     <p>여러가지 과학을 배우다 보니 어디에 관심이 생겼고. 수학, 화학동아리 활동했던거. 전문지식 매력에 어쩌고. 아니면 성격영향을 생각하기</p>
                                 </td>
                             </tr>
@@ -436,18 +452,18 @@
                 </header>
 
                 <center>
-                    <div style="padding:35px 20px 1px 20px; border-radius: 5px;text-align:left; width: 40%; background-color: rgba(255, 255, 246, 0.459); box-shadow: 1px 1px 2px gray;">
+                    <div style="padding:35px 20px 1px 20px; border-radius: 5px;text-align:left; min-width:300px; width: 40%; background-color: rgba(255, 255, 246, 0.459); box-shadow: 1px 1px 2px gray;">
                         <ul style=" list-style:none;">
                             <li><u><i>Yesol Han</i></u></li>
 
                             <li><a href="https://open.kakao.com/o/svyOfYyd" class="icon fas fa-comment-dots"><span class="label">Kakao</span>
-                                <p style="font-size: 18px; display: inline;font-weight: 100;"> Kakao Profile </p></a>
+                                <p style="font-size: 0.8em; display: inline; font-weight: 100;"> Kakao Profile </p></a>
                             </li>
-                            <li><a href="https://github.com/yesol-Han" class=" icon brands fa-github"><span class="label">Github</span>
-                                <p style="font-size: 18px; display: inline;"> https://github.com/yesol-Han </p></a>
+                            <li><a href="https://github.com/yesol-Han" class="icon brands fa-github"><span class="label">Github</span>
+                                <p style="font-size: 0.8em; display: inline;"> https://github.com/yesol-Han </p></a>
                             </li>
                             <li><a href="mailto: yesol@sch.ac.kr" class="icon solid fa-envelope"><span class="label">Email</span>
-                                <p style="font-size: 18px; display: inline;"> yesol@sch.ac.kr</p></a>
+                                <p style="font-size: 0.8em; display: inline;"> yesol@sch.ac.kr</p></a>
                             </li>
                         </ul>
                     </div>
