--- a/index.html
+++ b/index.html
@@ -210,29 +210,30 @@
                             </header>
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/wellness강의실.png" alt="" /></a>
+                            <a href="https://github.com/yesol-Han/Arduino/tree/main/%EC%9B%B0%EB%8B%88%EC%8A%A4%20%EA%B0%95%EC%9D%98%EC%8B%A4" class="image fit"><img src="images/wellness강의실.png" alt="" /></a>
                             <header>
                                 <h3>웰니스 강의실 (완1)<br> #팀P #2018 #Lab_to_Market대회 #일본_단기_워크숍_대표팀_선발</h3>
                             </header>
                         </article>
                     </div>
+
                     <div class="col-4 col-12-mobile">
                         <article class="item">
                             <a href="https://github.com/yesol-Han/Smart-Plug" class="image fit"><img src="images/Smart_Plug.png" alt="" /></a>
                             <header>
-                                <h3>스마트 플러그 <br>#연구실 #캡스톤대회 #2019</h3>
+                                <h3>스마트 플러그 (완1)<br>#연구실 #캡스톤대회 #2019</h3>
                             </header>
                         </article>
                         <article class="item">
                             <a href="#" class="image fit"><img src="images/메달.png" alt="" /></a>
                             <header>
-                                <h3>메달(Medical Calendar) <br>#2019 #팀P #스마트케어 #웹앱</h3>
+                                <h3>메달(Medical Calendar) (완1)<br>#2019-2020 #팀P #스마트케어 #웹앱 #디바이스</h3>
                             </header>
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/농구경기장.png" alt="" /></a>
+                            <a href="https://github.com/yesol-Han/Arduino/tree/main/%EB%86%8D%EA%B5%AC%20%EA%B2%BD%EA%B8%B0%EC%9E%A5%20IoT%20%EC%8B%9C%EC%8A%A4%ED%85%9C" class="image fit"><img src="images/농구경기장.png" alt="" /></a>
                             <header>
-                                <h3>농구경기장<br>#2018 #팀P</h3>
+                                <h3>농구 경기장 IoT 시스템 (완1)<br>#2018 #팀P</h3>
                             </header>
                         </article>
                     </div>
