--- a/index.html
+++ b/index.html
@@ -174,45 +174,58 @@
                     <p style="font-size: 0.7em;">사진을 클릭하면 관련 사이트로 넘어갑니다.</p>
                 </header>
 
-
                 <div class="row">
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
+                            <a href="#portfolio" class="image fit"><img src="images/pic01.jpg" alt="" /></a>
                             <header>
-                                <h3>반신욕 도우미<br>#개인_Project #2021 #진행중</h3>
+                                <h3>반신욕 도우미</h3>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2021 #개인Project #진행중</p>
                             </header>
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/그로잉밴드.png" alt="" /></a>
+                            <a href="https://github.com/yesol-Han/IDEA/tree/main/%EA%B7%B8%EB%A1%9C%EC%9E%89%EB%B0%B4%EB%93%9C" class="image fit"><img src="images/그로잉밴드.png" alt="" /></a>
                             <header>
-                                <h3>그로잉밴드 (완1)<br>#팀P #2019 #아이디어 <br>#제_6회_BIO_창업_아이디어_경진대회_예선합격 <br>#Lab_to_Market_수상작</h3>
+                                <h3>그로잉밴드</h3>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;"> #2019 #팀Project #아이디어
+                                    <br>#Lab_to_Market_최우수상
+                                    <br><a href="files/BIO대회_예선_참가확인증.jpg">#제6회_BIO창업아이디어경진대회<br>_예선작</a></p>
                             </header>
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/스마트클로젯.png" alt="" /></a>
+                            <a href="https://github.com/yesol-Han/IDEA/tree/main/%EC%8A%A4%EB%A7%88%ED%8A%B8%20%EC%98%B7%EC%9E%A5" class="image fit"><img src="images/스마트클로젯.png" alt="" /></a>
                             <header>
-                                <h3>스마트 클로젯 (완1)<br>#아이디어 #2019 #학술제</h3>
+                                <h3>스마트 옷장</h3>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2019 #2인Project #아이디어
+                                    <br><a href="https://github.com/yesol-Han/IDEA/blob/main/%EC%8A%A4%EB%A7%88%ED%8A%B8%20%EC%98%B7%EC%9E%A5/SCH%EB%AF%B8%EB%94%94%EC%96%B4%EB%9E%A9%EC%8A%A4_%ED%95%99%EC%88%A0%EC%A0%9C%20%ED%8F%AC%EC%8A%A4%ED%84%B0_SMART%20CLOSET.pdf">#SCH미디어랩스_학술제_출품</a></p>
                             </header>
                         </article>
                     </div>
+
                     <div class="col-4 col-12-mobile">
                         <article class="item">
-                            <a href="https://github.com/yesol-Han/2020_ESWContest_free_1057" class="image fit"><img src="images/Refrigerator.png" alt="" /></a>
+                            <a href="https://github.com/yesol-Han/Anti-Theft-System-in-a-Public-Refrigerator" class="image fit"><img src="images/Refrigerator.png" alt="" /></a>
                             <header>
-                                <h3>공용 냉장고 內 도난 방지 시스템 <br>#2020 <a href="files/SecurIoT 금상.jpg">#캡스톤대회_금상</a> #학술제 #2인_Project<br><a href="files/ESW 결선진출.png">#임베디드SW_경진대회_결선</a> #창의적_공학설계_경진대회</h3>
+                                <h3>공용 냉장고 內 도난 방지 시스템</h3>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2020 #2인Project
+                                    <br><a href="files/SecurIoT 금상.jpg">#캡스톤디자인대회_금상</a>
+                                    <br>#SCH미디어랩스_학술제_출품
+                                    <br><a href="files/ESW 결선진출.png">#임베디드SW_경진대회_결선</a>
+                                    <br><a href="files/창의적종합설계경진대회 참가인증서.pdf">#창의적_종합설계_경진대회</a></p>
                             </header>
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/디지털 헌혈증서 플랫폼.png" alt="" /></a>
+                            <a href="https://github.com/yesol-Han/IDEA/tree/main/%EB%94%94%EC%A7%80%ED%84%B8%20%ED%97%8C%ED%98%88%EC%A6%9D%EC%84%9C%20%ED%94%8C%EB%9E%AB%ED%8F%BC" class="image fit"><img src="images/디지털 헌혈증서 플랫폼.png" alt="" /></a>
                             <header>
-                                <h3>디지털 헌혈증서 플랫폼 (완1)<br> #캡스톤 #팀P #2020 #Web</h3>
+                                <h3>디지털 헌혈증서 플랫폼</h3>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2020 #팀Project #캡스톤디자인대회 <br>#블록체인 #아이디어</p>
                             </header>
                         </article>
                         <article class="item">
                             <a href="https://github.com/yesol-Han/Arduino/tree/main/%EC%9B%B0%EB%8B%88%EC%8A%A4%20%EA%B0%95%EC%9D%98%EC%8B%A4" class="image fit"><img src="images/wellness강의실.png" alt="" /></a>
                             <header>
-                                <h3>웰니스 강의실 (완1)<br> #팀P #2018 #Lab_to_Market대회 #일본_단기_워크숍_대표팀_선발</h3>
+                                <h3>웰니스 강의실</h3>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2018 #팀Project <br>#Lab_to_Market대회 <br>#일본워크숍_대표팀_선발</p>
                             </header>
                         </article>
                     </div>
@@ -221,19 +234,22 @@
                         <article class="item">
                             <a href="https://github.com/yesol-Han/Smart-Plug" class="image fit"><img src="images/Smart_Plug.png" alt="" /></a>
                             <header>
-                                <h3>스마트 플러그 (완1)<br>#연구실 #캡스톤대회 #2019</h3>
+                                <h3>스마트 플러그</h3>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2019 #연구실 #캡스톤디자인대회</p>
                             </header>
                         </article>
                         <article class="item">
-                            <a href="#" class="image fit"><img src="images/메달.png" alt="" /></a>
+                            <a href="https://github.com/yesol-Han/IDEA/tree/main/%EB%A9%94%EB%8B%AC(Medical%20Calendar)" class="image fit"><img src="images/메달.png" alt="" /></a>
                             <header>
-                                <h3>메달(Medical Calendar) (완1)<br>#2019-2020 #팀P #스마트케어 #웹앱 #디바이스</h3>
+                                <h3>메달(Medical Calendar)</h3>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2019-2020 #팀Project <br>#웹앱 #디바이스<br> #Lab_to_Market대회</p>
                             </header>
                         </article>
                         <article class="item">
                             <a href="https://github.com/yesol-Han/Arduino/tree/main/%EB%86%8D%EA%B5%AC%20%EA%B2%BD%EA%B8%B0%EC%9E%A5%20IoT%20%EC%8B%9C%EC%8A%A4%ED%85%9C" class="image fit"><img src="images/농구경기장.png" alt="" /></a>
                             <header>
-                                <h3>농구 경기장 IoT 시스템 (완1)<br>#2018 #팀P</h3>
+                                <h3>농구 경기장 IoT 시스템</h3>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2018 #팀Project</p>
                             </header>
                         </article>
                     </div>
@@ -253,31 +269,29 @@
                 <section class="carousel">
                     <div class="reel">
                         <article>
-                            <a href="#" class="image featured"><img src="images/글로벌 빌리지.png" alt="" /></a>
+                            <a href="/files/글로벌 빌리지 수료.jpg" class="image featured"><img src="images/글로벌 빌리지.png" alt="" /></a>
                             <header>
-                                <h3>
-                                    <a href="#"></a>글로벌 빌리지</a>
-                                </h3>
+                                <h3><a href="/files/글로벌 빌리지 수료.jpg">글로벌 빌리지</a></h3>
                             </header>
-                            <p>2019.09 - 2020.06</br>
+                            <p>2019.09 - 2020.06</br> 느낀점 한두줄 쓰기/ 외국인 친구들과 소통하며 편견을 깨부수는 기회, 언어의 장벽을
                             </p>
 
                         </article>
 
                         <article>
-                            <a href="#" class="image featured"><img src="images/전공체험.jpg" alt="" /></a>
+                            <a href="http://www.goodmorningcc.com/news/articleView.html?idxno=216318" class="image featured"><img src="images/전공체험.jpg" alt="" /></a>
                             <header>
-                                <h3>드림멘토</h3>
+                                <h3><a href="http://www.goodmorningcc.com/news/articleView.html?idxno=216318">Dream Mentor</a></h3>
                             </header>
-                            <p>2019.03 - 2020.08</p>
+                            <p>2019.03 - 2020.08<br/> 진로를 고민하는 단계의 중,고등학생들을 만나 IoT를 소개하고 체험시켜주는 활동이었습니다. 학생들이 HW조립과 SW개발을 체험하는 과정에서 제가 느꼈던 IoT에 대한 열정을 다시 찾을 수 있었습니다.</p>
                         </article>
 
                         <article>
                             <a href="/files/글로벌+융합교육+프로그램+결과보고서.pdf" class="image featured"><img src="images/일본연수.png" alt="" /></a>
                             <header>
-                                <h3>일본 워크숍</h3>
+                                <h3><a href="/files/글로벌+융합교육+프로그램+결과보고서.pdf">일본 워크숍</a></h3>
                             </header>
-                            <p>2019.01 <br>학교에서 지원해줌</p>
+                            <p>2019.01 <br/>한국이 아닌 해외(일본)시장에서의 트랜드를 분석했습니다. 그리고 고안한 아이템(웰니스 강의실)에 대한 현지 설문조사와 현지 박람회 방문을 통해 해외 시장에서도 흥미롭게 바라볼만한 아이템에 대해 공부하는 기회가 되었습니다.</p>
                         </article>
 
                         <article>
@@ -285,7 +299,7 @@
                             <header>
                                 <h3><a href="#">학생회</a></h3>
                             </header>
-                            <p>2017.03 - 2020.08 </p>
+                            <p>2017.03 - 2020.08 <br/> 4년 동안 학과에 대한 애정과 소속감을 바탕으로...... 봉사.. </p>
                         </article>
 
                         <article>
