--- a/index.html
+++ b/index.html
@@ -116,48 +116,93 @@
 
                 <div class="row">
                     <div class="col-6 col-12-mobile">
-                        <article class="item">
-                            <h3><strong>Python</strong></h3>
-                            <div class="progress">
-                                <div role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%">
-                                    <span>60%</span>
-                                </div>
-                            </div>
-                            <p>예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다. 파이썬 언어의 기본적인 문법에 대해 알고 있으며, 자료구조 및 알고리즘을 파이썬으로 공부하였습니다.</p>
-                        </article>
-
-                        <article class="item">
-                            <h3 class="progressbar-title">WEB: HTML + CSS + JS</h3>
+                        <article class="item" style="box-shadow: none;">
+                            <h3 class="progressbar-title">Python</h3>
                             <div class="progress">
                                 <div class="progress-bar" style="width: 65%; background: #ed687c;">
                                     <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
                                     <div class="progress-value">65%</div>
                                 </div>
                             </div>
-                            <p>예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다.</p>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;"> Python 언어가 대중적이고 활용도가 높은 언어인 만큼 RaspberryPi나 Server에서 정보를 가공하면서 자주 사용하였습니다. Rest API를 이용한 Mobius, 카카오 API 등을 활용해 보았고, 현재도 알고리즘 및 문제해결 풀이를 파이썬으로 공부하고 있습니다.</p>
+                        </article>
+
+                        <article class="item" style="box-shadow: none;">
+                            <h3 class="progressbar-title">Javascript</h3>
+                            <div class="progress">
+                                <div class="progress-bar" style="width: 40%; background: #ed687c;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
+                                    <div class="progress-value">40%</div>
+                                </div>
+                            </div>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">Javascript의 기본 문법을 익히고 그 중에서도 Node.js 플랫폼을 이용하여 </p>
+                        </article>
+
+                        <article class="item" style="box-shadow: none;">
+                            <h3 class="progressbar-title">WEB: HTML5 + CSS3 + JS</h3>
+                            <div class="progress">
+                                <div class="progress-bar" style="width: 50%; background: #ed687c;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
+                                    <div class="progress-value">50%</div>
+                                </div>
+                            </div>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">IoT 플랫폼을 전반적으로 다루기 위해서는 사용자가 정보에 접근할 수 있는 Front-Web도 할줄 알아야 합니다. 기본 작업 및 템플릿 기반의 작업도 가능합니다.</p>
+                        </article>
+                        <article class="item" style="box-shadow: none;">
+                            <h3 class="progressbar-title">Machine Learning</h3>
+                            <div class="progress">
+                                <div class="progress-bar" style="width: 20%; background: #ed687c;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
+                                    <div class="progress-value">20%</div>
+                                </div>
+                            </div>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">자연스러운 서비스를 제공하기 위해서 필요한 학습이라고 생각합니다. 행동 구별, 부동산 집값예측 등을 분석해보았으며, 아나콘다(Jupyter Notebook)를 통해 실습하며 Ageron의 Hans-on 교재를 통해 천천히 공부하고 있습니다.</p>
                         </article>
                     </div>
 
                     <div class="col-6 col-12-mobile">
-                        <article class="item">
-                            <h3 class="progressbar-title">CSS3</h3>
+                        <article class="item" style="box-shadow: none;">
+                            <h3 class="progressbar-title">C/C++</h3>
                             <div class="progress">
                                 <div class="progress-bar" style="width: 50%; background: #92c26a;">
                                     <span class="progress-icon fa fa-check" style="border-color:#92c26a; color:#92c26a;"></span>
                                     <div class="progress-value">50%</div>
                                 </div>
                             </div>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">C언어를 학습하고 C++ 언어로 자료구조와 알고리즘을 학습하였습니다. Arduino나 RaspberryPi 등을 제어하기 위해 사용</p>
                         </article>
 
-                        <article class="item">
-                            <h3 class="progressbar-title">java script</h3>
+                        <article class="item" style="box-shadow: none;">
+                            <h3 class="progressbar-title">Linux Programming</h3>
+                            <div class="progress">
+                                <div class="progress-bar" style="width: 80%; background: #f0ad4e;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
+                                    <div class="progress-value">50%</div>
+                                </div>
+                            </div>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">하드웨어의 높은 이식성이 장점인 Linux 환경은 RaspberryPi OS로 자주 사용했습니다. CUI 기반의 Cafe Kiosk를 개발했습니다. Ubuntu, Debian OS를 사용한 경험이 있고 가상 툴로는 VirtualBox/ VMware를 통해 정보보안을 학습하였습니다.</p>
+                        </article>
+
+                        <article class="item" style="box-shadow: none;">
+                            <h3 class="progressbar-title">Android Studio</h3>
                             <div class="progress">
                                 <div class="progress-bar" style="width: 80%; background: #f0ad4e;">
                                     <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
                                     <div class="progress-value">80%</div>
                                 </div>
                             </div>
-                            예시)파이썬 기초에 대해서 공부하고, 파이썬을 통해 컴퓨터사이언스를 학습하였습니다.
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">초기에는 Java언어를 이용하여 Mobius 플랫폼을 이용한 앱을 제작하였으나 이후 Kotlin 언어를 공부하며하여 영어 단어 앱과 공용 냉장고의 사용자 앱을 제작하였습니다.</p>
+                        </article>
+
+                        <article class="item" style="box-shadow: none;">
+                            <h3 class="progressbar-title">Github</h3>
+                            <div class="progress">
+                                <div class="progress-bar" style="width: 65%; background: #ed687c;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
+                                    <div class="progress-value">65%</div>
+                                </div>
+                            </div>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">ESW대회를 준비하며 본격적으로 협업 툴 및 저장소로 활용하기 시작했으며, 대부분의 프로젝트를 Github를 통해 소스 코드를 관리하고 있습니다. 또한 Github 서버를 활용하여 포트폴리오 사이트를 관리합니다.</p>
                         </article>
                     </div>
                 </div>
@@ -242,7 +287,7 @@
                             <a href="https://github.com/yesol-Han/IDEA/tree/main/%EB%A9%94%EB%8B%AC(Medical%20Calendar)" class="image fit"><img src="images/메달.png" alt="" /></a>
                             <header>
                                 <h3>메달(Medical Calendar)</h3>
-                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2019-2020 #팀Project <br>#웹앱 #디바이스<br> #Lab_to_Market대회</p>
+                                <p style="font-size: 0.9em; margin:0; line-height: 1.5em;">#2019-2020 #팀Project <br>#웹앱 #디바이스<br> #Lab_to_Market대회_우수상</p>
                             </header>
                         </article>
                         <article class="item">
@@ -305,7 +350,7 @@
                         <article>
                             <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
                             <header>
-                                <h3><a href="#">코딩 학습튜터</a></h3>
+                                <h3>코딩 학습튜터</h3>
                             </header>
                             <p>2019.09 - 2019.12 / 2021.09 - 2021.12</p>
                         </article>
@@ -313,19 +358,10 @@
                         <article>
                             <a href="#" class="image featured"><img src="images/창업동아리.png" alt="" /></a>
                             <header>
-                                <h3><a href="#">창업동아리</a></h3>
+                                <h3>창업동아리</h3>
                             </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+                            <p>2018.09 - 2020.06</p>
                         </article>
-
-                        <article>
-                            <a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-                            <header>
-                                <h3><a href="#">글로벌 빌리지</a></h3>
-                            </header>
-                            <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-                        </article>
-
                     </div>
                 </section>
             </div>
