--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="logo">
                 <span class="image avatar48"><img src="images/avatar.PNG" alt="" /></span>
                 <h1 id="title">Yesol Han</h1>
-                <p>IoT/Embedded Engineer</p>
+                <p>IoT/Embedded SW Engineer</p>
             </div>
 
             <!-- Nav -->
@@ -98,7 +98,6 @@
                     <mark style="font-weight:500;">"안녕하세요. 당신을 위한 서비스를 만드는 신입 IoT 개발자 한예솔입니다."</mark>
                     <br/>무엇을 만들고 싶은지. 왜 IoT인지. 나의 비전이 뭔지.
                 </p>
-
         </section>
 
         <!-- 3 techskills -->
@@ -109,9 +108,15 @@
                     <h2>Tech Skills</h2>
                 </header>
 
-                <p style="font-size: 0.8em;">음.... 이것저것 할줄 아는데 줄글로 쭉쭉쭉 ㅇㅇㅇㅇㅇ하는ㅇㅇ
+                <p style="font-size: 0.8em;line-height: 1.5em;">제가 배운 사물인터넷(Internet of Things)이란
+                    </br> 사물들의 통신을 바탕으로 센싱한 정보를 가공하여 사용자에게 서비스를 액츄에이팅하는 것입니다.
+                    </br> 스마트한 공간에 필요한 온도, 재실, 전력량 등 여러 센서들을 사용해 데이터를 모아서 가공하고,
+                    </br> Bluetooth, Wi-Fi, Socket, API 등을 이용해 통신하며,
+                    </br> 모니터링 및 관리(?)하는 활동을 할 수 있습니다.
+
                     </br>
-                    ㅇㅇㅇㅇㅇ하는ㅇㅇㅇ</br> ㅇ ㅇㅇㅇㅇㅇ하는ㅇ ㅇ</br> ㅇㅇㅇㅇㅇ하는ㅇㅇㅇㅇ </br>ㅇㅇㅇㅇㅇ하는 </br>밑에 너무 크다 사이즈 줄이기
+                    </br> 프로젝트 관리툴로는 github, slack, notion, google drive 등을 사용하였습니다.
+                    </br> (Java는 자신 없어서 뺐습니당.. 센싱을 따로 넣어야 할까요...)</br>
                 </p>
 
                 <div class="row">
@@ -124,18 +129,19 @@
                                     <div class="progress-value">65%</div>
                                 </div>
                             </div>
-                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;"> Python 언어가 대중적이고 활용도가 높은 언어인 만큼 RaspberryPi나 Server에서 정보를 가공하면서 자주 사용하였습니다. Rest API를 이용한 Mobius, 카카오 API 등을 활용해 보았고, 현재도 알고리즘 및 문제해결 풀이를 파이썬으로 공부하고 있습니다.</p>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">대중적이고 활용도가 높은 언어인 만큼 RaspberryPi나 Server에서 정보를 가공하면서 자주 사용하였습니다.
+                                </br>Rest API를 이용한 Mobius, Kakao API 등을 활용해 보았고, 현재도 알고리즘 및 문제해결 풀이를 파이썬으로 공부하고 있습니다.</p>
                         </article>
 
                         <article class="item" style="box-shadow: none;">
                             <h3 class="progressbar-title">Javascript</h3>
                             <div class="progress">
-                                <div class="progress-bar" style="width: 40%; background: #ed687c;">
-                                    <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
+                                <div class="progress-bar" style="width: 40%; background: #f0ad4e;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
                                     <div class="progress-value">40%</div>
                                 </div>
                             </div>
-                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">Javascript의 기본 문법을 익히고 그 중에서도 Node.js 플랫폼을 이용하여 </p>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">Javascript의 기본 문법을 익히고 그 중에서도 Node.js 플랫폼을 사용하고 있습니다.(이번 학기 공부 중)</p>
                         </article>
 
                         <article class="item" style="box-shadow: none;">
@@ -146,17 +152,18 @@
                                     <div class="progress-value">50%</div>
                                 </div>
                             </div>
-                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">IoT 플랫폼을 전반적으로 다루기 위해서는 사용자가 정보에 접근할 수 있는 Front-Web도 할줄 알아야 합니다. 기본 작업 및 템플릿 기반의 작업도 가능합니다.</p>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">사용자가 정보에 접근하는 Web은 서비스를 이용하는 수단으로 중요한 요소라고 생각합니다.
+                                </br>DB와 연동 및 API를 사용하여 기본 작업 및 템플릿 기반의 작업이 가능합니다.</p>
                         </article>
                         <article class="item" style="box-shadow: none;">
                             <h3 class="progressbar-title">Machine Learning</h3>
                             <div class="progress">
-                                <div class="progress-bar" style="width: 20%; background: #ed687c;">
-                                    <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
+                                <div class="progress-bar" style="width: 20%; background: #74a9d4;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#74a9d4; color:#74a9d4;"></span>
                                     <div class="progress-value">20%</div>
                                 </div>
                             </div>
-                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">자연스러운 서비스를 제공하기 위해서 필요한 학습이라고 생각합니다. 행동 구별, 부동산 집값예측 등을 분석해보았으며, 아나콘다(Jupyter Notebook)를 통해 실습하며 Ageron의 Hans-on 교재를 통해 천천히 공부하고 있습니다.</p>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">자연스러운 서비스를 제공하기 위해서 필요한 학습이라고 생각합니다. "스마트폰을 통한 행동인식", "부동산 집값 예측" 등의 프로젝트들을 진행했으며, 아나콘다(Jupyter Notebook) 툴을 통해 실습하며 Ageron의 Hans-on 교재를 통해 천천히 공부하고 있습니다.</p>
                         </article>
                     </div>
 
@@ -164,42 +171,44 @@
                         <article class="item" style="box-shadow: none;">
                             <h3 class="progressbar-title">C/C++</h3>
                             <div class="progress">
-                                <div class="progress-bar" style="width: 50%; background: #92c26a;">
-                                    <span class="progress-icon fa fa-check" style="border-color:#92c26a; color:#92c26a;"></span>
+                                <div class="progress-bar" style="width: 50%; background: #ed687c;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
                                     <div class="progress-value">50%</div>
                                 </div>
                             </div>
-                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">C언어를 학습하고 C++ 언어로 자료구조와 알고리즘을 학습하였습니다. Arduino나 RaspberryPi 등을 제어하기 위해 사용</p>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">C언어를 학습을 기반으로 C++언어로 자료구조와 알고리즘을 학습하였습니다.
+                                </br>Arduino 등 Windows 환경에서 보드를 제어하거나 Socket 등 네트워크 통신이 필요할 때 활용하였습니다.</p>
                         </article>
 
                         <article class="item" style="box-shadow: none;">
                             <h3 class="progressbar-title">Linux Programming</h3>
                             <div class="progress">
-                                <div class="progress-bar" style="width: 80%; background: #f0ad4e;">
+                                <div class="progress-bar" style="width: 45%; background: #f0ad4e;">
                                     <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
-                                    <div class="progress-value">50%</div>
+                                    <div class="progress-value">45%</div>
                                 </div>
                             </div>
-                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">하드웨어의 높은 이식성이 장점인 Linux 환경은 RaspberryPi OS로 자주 사용했습니다. CUI 기반의 Cafe Kiosk를 개발했습니다. Ubuntu, Debian OS를 사용한 경험이 있고 가상 툴로는 VirtualBox/ VMware를 통해 정보보안을 학습하였습니다.</p>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">하드웨어의 높은 이식성이 장점인 Linux 환경은 RaspberryPi OS로 자주 사용했습니다.
+                                </br>CUI 기반의 Cafe Kiosk를 개발했으며 Ubuntu, Debian OS를 주로 사용하고 가상 툴로는 VirtualBox / VMware를 통해 정보 보안도 학습하였습니다.</p>
                         </article>
 
                         <article class="item" style="box-shadow: none;">
-                            <h3 class="progressbar-title">Android Studio</h3>
+                            <h3 class="progressbar-title">Mobile: Android Studio</h3>
                             <div class="progress">
-                                <div class="progress-bar" style="width: 80%; background: #f0ad4e;">
-                                    <span class="progress-icon fa fa-check" style="border-color:#f0ad4e; color:#f0ad4e;"></span>
-                                    <div class="progress-value">80%</div>
+                                <div class="progress-bar" style="width: 30%; background: #92c26a;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#92c26a; color:#92c26a;"></span>
+                                    <div class="progress-value">30%</div>
                                 </div>
                             </div>
-                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">초기에는 Java언어를 이용하여 Mobius 플랫폼을 이용한 앱을 제작하였으나 이후 Kotlin 언어를 공부하며하여 영어 단어 앱과 공용 냉장고의 사용자 앱을 제작하였습니다.</p>
+                            <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">초기에는 Java언어를 이용하여 Mobius 플랫폼을 이용한 앱을 제작했습니다. 이후 Kotlin 언어를 공부하여 Naver API를 이용한 영어 단어 앱과 Mobius API를 이용한 공용 냉장고의 사용자 앱을 제작하였습니다.</p>
                         </article>
 
                         <article class="item" style="box-shadow: none;">
                             <h3 class="progressbar-title">Github</h3>
                             <div class="progress">
-                                <div class="progress-bar" style="width: 65%; background: #ed687c;">
-                                    <span class="progress-icon fa fa-check" style="border-color:#ed687c; color:#ed687c;"></span>
-                                    <div class="progress-value">65%</div>
+                                <div class="progress-bar" style="width: 30%; background: #92c26a;">
+                                    <span class="progress-icon fa fa-check" style="border-color:#92c26a; color:#92c26a;"></span>
+                                    <div class="progress-value">30%</div>
                                 </div>
                             </div>
                             <p style="font-size: 0.7em;line-height: 1.5em;text-align: left;">ESW대회를 준비하며 본격적으로 협업 툴 및 저장소로 활용하기 시작했으며, 대부분의 프로젝트를 Github를 통해 소스 코드를 관리하고 있습니다. 또한 Github 서버를 활용하여 포트폴리오 사이트를 관리합니다.</p>
@@ -214,7 +223,7 @@
             <div class="container">
 
                 <header>
-                    <h2>Project</h2>
+                    <h2>Project (완료)</h2>
 
                     <p style="font-size: 0.7em;">사진을 클릭하면 관련 사이트로 넘어갑니다.</p>
                 </header>
@@ -344,7 +353,15 @@
                             <header>
                                 <h3><a href="#">학생회</a></h3>
                             </header>
-                            <p>2017.03 - 2020.08 <br/> 4년 동안 학과에 대한 애정과 소속감을 바탕으로...... 봉사.. </p>
+                            <p>2017.03 - 2020.08 <br/> 4년 동안 학과에 대한 애정과 소속감을 바탕으로...... 봉사.. 동아리 활동 신청을 직접 만든 서버와 웹페이지를 배포하였다.</p>
+                        </article>
+
+                        <article>
+                            <a href="#" class="image featured"><img src="images/창업동아리.png" alt="" /></a>
+                            <header>
+                                <h3>창업동아리</h3>
+                            </header>
+                            <p>2018.09 - 2020.06 <br> 매 학기마다 아이템 생각해내는 일........ 여러가지 측면에서 생각하는 경험, </p>
                         </article>
 
                         <article>
@@ -353,14 +370,6 @@
                                 <h3>코딩 학습튜터</h3>
                             </header>
                             <p>2019.09 - 2019.12 / 2021.09 - 2021.12</p>
-                        </article>
-
-                        <article>
-                            <a href="#" class="image featured"><img src="images/창업동아리.png" alt="" /></a>
-                            <header>
-                                <h3>창업동아리</h3>
-                            </header>
-                            <p>2018.09 - 2020.06</p>
                         </article>
                     </div>
                 </section>
@@ -499,7 +508,7 @@
             <div class="container">
 
                 <header>
-                    <h2>Contact</h2>
+                    <h2>Contact (완)</h2>
                 </header>
 
                 <center>
